tayyor narsano git hupda ochdim

--- a/index.html
+++ b/index.html
@@ -8,6 +8,138 @@
     <link rel="stylesheet" href="./stay.css">
 </head>
 <body>
-    <h2>eeewwwee</h2>
+    <div class="container">
+        <div class="lorem">
+            <div class="stayl">
+                <div class="book">
+                    <p class="out1"> What our </p>
+                    <p class="out1"> clients say </p>
+                </div>
+                <div class="werring1">
+                    <p class="youtup1">
+                        Lorem ipsum dolor sit amet consectetur adipiscing elit semper dalar elementum
+                    </p>
+                    <div class="lily">
+                        <p class="youtup2">
+                            tempus hac
+                        </p>
+                        <p class="youtup2">
+                            tellus libero
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="werring2">
+                <div class="ellemant">
+                    <a href=""> Register restaurant </a>
+                    <a href=""> Download app </a>
+                </div>
+            </div>
+        </div>
+        <div class="ssayy">
+            <div class="dolsab">
+                <div class="keep">
+                    <div class="need1">
+                        <img src="./images/icon/IMAGE (39).svg" alt="">
+                        <div class="populur">
+                            <p class="ineternet1"> John Carter </p>
+                            <p class="ineternet2"> Echo Park </p>
+                        </div>
+                    </div>
+                    <div class="need2">
+                        <img src="./images/icon/Rectangle.svg" alt="">
+                    </div>
+                </div>
+                <p class="teacher">
+                    “Lorem ipsum dolor sit ametolil col consectetur adipiscing lectus a nunc mauris scelerisque
+                </p>
+            </div>
+            <div class="dolsab">
+                <div class="keep">
+                    <div class="need1">
+                        <img src="./images/icon/IMAGE (39).svg" alt="">
+                        <div class="populur">
+                            <p class="ineternet1"> John Carter </p>
+                            <p class="ineternet2"> Echo Park </p>
+                        </div>
+                    </div>
+                    <div class="need2">
+                        <img src="./images/icon/Rectangle.svg" alt="">
+                    </div>
+                </div>
+                <p class="teacher">
+                    “Lorem ipsum dolor sit ametolil col consectetur adipiscing lectus a nunc mauris scelerisque
+                </p>
+            </div>
+            <div class="dolsab">
+                <div class="keep">
+                    <div class="need1">
+                        <img src="./images/icon/IMAGE (39).svg" alt="">
+                        <div class="populur">
+                            <p class="ineternet1"> John Carter </p>
+                            <p class="ineternet2"> Echo Park </p>
+                        </div>
+                    </div>
+                    <div class="need2">
+                        <img src="./images/icon/Rectangle.svg" alt="">
+                    </div>
+                </div>
+                <p class="teacher">
+                    “Lorem ipsum dolor sit ametolil col consectetur adipiscing lectus a nunc mauris scelerisque
+                </p>
+            </div>
+            <div class="dolsab">
+                <div class="keep">
+                    <div class="need1">
+                        <img src="./images/icon/IMAGE (39).svg" alt="">
+                        <div class="populur">
+                            <p class="ineternet1"> John Carter </p>
+                            <p class="ineternet2"> Echo Park </p>
+                        </div>
+                    </div>
+                    <div class="need2">
+                        <img src="./images/icon/Rectangle.svg" alt="">
+                    </div>
+                </div>
+                <p class="teacher">
+                    “Lorem ipsum dolor sit ametolil col consectetur adipiscing lectus a nunc mauris scelerisque
+                </p>
+            </div>
+            <div class="dolsab">
+                <div class="keep">
+                    <div class="need1">
+                        <img src="./images/icon/IMAGE (39).svg" alt="">
+                        <div class="populur">
+                            <p class="ineternet1"> John Carter </p>
+                            <p class="ineternet2"> Echo Park </p>
+                        </div>
+                    </div>
+                    <div class="need2">
+                        <img src="./images/icon/Rectangle.svg" alt="">
+                    </div>
+                </div>
+                <p class="teacher">
+                    “Lorem ipsum dolor sit ametolil col consectetur adipiscing lectus a nunc mauris scelerisque
+                </p>
+            </div>
+            <div class="dolsab">
+                <div class="keep">
+                    <div class="need1">
+                        <img src="./images/icon/IMAGE (39).svg" alt="">
+                        <div class="populur">
+                            <p class="ineternet1"> John Carter </p>
+                            <p class="ineternet2"> Echo Park </p>
+                        </div>
+                    </div>
+                    <div class="need2">
+                        <img src="./images/icon/Rectangle.svg" alt="">
+                    </div>
+                </div>
+                <p class="teacher">
+                    “Lorem ipsum dolor sit ametolil col consectetur adipiscing lectus a nunc mauris scelerisque
+                </p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
